Fixed button visbility; changed from display property to visibility property

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ body {
     border-radius: 6px;     
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;  
+    
 }
 
 #title {
@@ -57,7 +58,7 @@ body {
     display: flex;
     justify-content: space-around;
     gap: 50vw;
-    padding-bottom: 14vh;
+    padding-bottom: 14vh;    
 }
 
 .btn_container button {
@@ -73,7 +74,7 @@ body {
     font-size: 1.5vw;
     font-weight: bolder;
     border: 1px solid #fff;
-    display: none;
+    visibility: hidden;
 }
 
 #sceneBtn:hover {
@@ -88,7 +89,7 @@ body {
     font-weight: bolder;
     background-color: rgba(28, 70, 179, 0.45);
     border: 1px solid #fff;
-    display: none;
+    visibility: hidden;
 }
 
 #soundBtn:hover {
